--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Newton Brian Wanyonyi | Portfolio</title>
     <meta name="description" content="Portfolio website of Newton Brian Wanyonyi - Full Stack Developer, CEO, and Computer Science Student" />
-    <meta name="author" content="Newton Brian Wanyonyi" />
+    <meta name="author" content="Newton Brian Nyongesa" />
     <meta property="og:image" content="/og-image.png" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   </head>
